tools/flowc/tests/errors/error3.flow
FcInfo2(start : int, end : int);
FcInfo(name : string, rstart : int, end : int);

validateFcInfos() -> void {
	infos1 = [FcInfo2(0,0)];
	infos2 = [FcInfo("", 0, 0)];
	infos = [infos1, infos2];
}
